--- a/css/main.css
+++ b/css/main.css
@@ -142,6 +142,7 @@ input{
     font-weight: 100;
     font-size: 3em;
     color: #fafafa;
+    text-align: center;
     text-shadow: 1px 1px 6px #000;
 }
 .dud {
@@ -214,6 +215,13 @@ body {
     -webkit-transform: perspective(800px);
     transform: perspective(800px);
 }
+
+.main {
+    position: fixed;
+    bottom: 0;
+    padding: 50px 0;
+}
+
 .button_container {
     position: fixed;
     top: 5%;
@@ -384,7 +392,6 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    pointer-events: none;
 }
 .row {
     text-align: center;
